Updates/fixes: Roles, Supp Mat @naszam

--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -78,10 +78,10 @@ Thus, the system acts also as a reputation builder.
 
 \subsubsection{Transparency and re-usability of the records.} The peer-review history, including authors' replies and reviewers' recommendations, should be openly and permanently accessible to the community (in the form of 'open reports' of open peer-reviews) even before articles' publication in order to  make editorial decisions more democratic and prevent waste of knowledge. Following the example of models offered by journals peer-review consortia, such as the \emph{Neuroscience Peer Review Consortium}\footnote[4]{\emph{Neuroscience Peer Review Consortium}.\textsc{URL:}http://nprc.incf.org.} and independent companies like \emph{ResearchSquare} \footnote[5]{\emph{ResearchSquare}.\textsc{URL:}https://www.researchsquare.com.} and \emph{Peerage of Science} \footnote[6]{\emph{Peerage of Science}.\textsc{URL:} https://www.peerageofscience.org.}, that provide a scientific peer review service, peer-reviews in Ants-Review will be transferable across journals (like in 'cascading' or 'portable peer-reviews').
 
-\subsubsection{Accountability via pseudo-anonymity.} In order to counteract malicious behaviour (see 2.1) affecting the integrity of the reviews but also to correctly attribute the intellectual contributions making sure there are no conflict of interest, it's important to be able to track back the identities of the contributors to a peer-review report. This is possible if the platform acts like a version control system where commits are permanent and their hashes timestamped. InterPlanetary File System (IPFS) \cite{IPFS} is a peer-to-peer hypermedia protocol for storing data in a distributed file system over the internet which guarantees data \emph{immutability} and unique file identification via cryptographic hashes. IPFS' hashes are then stored inside the smart contracts' state that is timestamped into the Ethereum blocks where  the transactions take place; there, data remain unaltered and indelible. This notarization process is called Proof of Existence (PoE)and allows manual verification of the existence of the document.
-\newline To prevent retaliation for negative peer-reviews and to promote the participation of early researchers who might feel intimidated to judge the scientific work of senior authors, the Ants-Review system maintains the privacy of both authors and reviewers in a double-blind approach via Ethereum’s Externally Owned Accounts (EOA) addresses, zero-knowledge proofs, a cryptographic method where a party can prove to another party the possession of certain information, like a secret key, without revealing that information (see 3.2).
+\subsubsection{Accountability via pseudo-anonymity.} In order to counteract malicious behaviour (see 2.1) affecting the integrity of the reviews but also to correctly attribute the intellectual contributions making sure there are no conflict of interest, it's important to be able to track back the identities of the contributors to a peer-review report. This is possible if the platform acts like a version control system where commits are permanent and their hashes timestamped. InterPlanetary File System (IPFS) \cite{IPFS} is a peer-to-peer hypermedia protocol for storing data in a distributed file system over the internet which guarantees data immutability and unique file identification via cryptographic hashes. IPFS' hashes are then stored inside the smart contracts' state that is timestamped into the Ethereum blocks where  the transactions take place; there, data remain unaltered and indelible. This notarization process is called proof of existence (PoE) and allows manual verification of the existence of the document.
+\newline To prevent retaliation for negative peer-reviews and to promote the participation of early researchers who might feel intimidated to judge the scientific work of senior authors, the Ants-Review system maintains the privacy of both authors and reviewers in a double-blind approach via Ethereum’s externally owned accounts (EOA) addresses and zero-knowledge proof, a cryptographic method where a party can prove to another party the possession of certain information, like a secret key, without revealing that information (see 3.2).
 
-\subsubsection{Inclusiveness via gamification.} As a final step we propose that all the community is involved in the process of peer-reviewing abolishing the editorial selection process ('open participation', 'open interaction', 'open platform' \cite{OPR-Ross-Hellauer,RossHellauer-OPR}). In this way, the pool of reviewers is enriched and allows younger researchers to get the appropriate training through interactive feedback. Moreover, peer-reviews could be evaluated, commented, criticised by the other members of the scientific community, enabling a virtuous loop of verification. An interesting addition would be to introduce a rank of peer-reviews resulting from the community feedback via a voting process (see 4.1). It's conceivable that the community members that engage in assessing the quality of peer-reviews could be incentivized as well. This solution would create a self-reinforcing ethical behaviour where the fair evaluation of peer-reviews would be also in the interest of the agents at play.
+\subsubsection{Inclusiveness via gamification.} As a final step we propose that all the community is involved in the process of peer-reviewing by abolishing the editorial selection process through 'open participation' (or 'open interaction', 'open platform' \cite{OPR-Ross-Hellauer,RossHellauer-OPR}). In this way, the pool of reviewers is enriched and allows younger researchers to get the appropriate training through interactive feedback. Moreover, peer-reviews could be evaluated, commented, criticised by the other members of the scientific community, enabling a virtuous loop of verification. An interesting addition would be to introduce a rank of peer-reviews resulting from the community feedback via a voting process (see 4.1). It's conceivable that the community members that engage in assessing the quality of peer-reviews could be incentivized as well. This solution would create a self-reinforcing ethical behaviour where the fair evaluation of peer-reviews would be also in the interest of the agents at play.
 
 \subsection{Implementation}
 
@@ -102,49 +102,46 @@ Thus, the system acts also as a reputation builder.
 \end{figure}
 
 \newline The Ants-Review Protocol is divided into different modules responsible for the following functionalities, as shown in the flow-chart (see Figure \ref{fig:contracts}):
-\emph{AntsReview}, which manages access management and the core system (see Figure \ref{fig:contracts}, (\textbf{a, b, f, h})).
-\emph{Privacy}, which maintains the anonymity of the system via AZTEC Protocol (see Figure  \ref{fig:contracts}, (\textbf{d})).
-\emph{Tokenomics}, which manages the incentive mechanism of the system (see Figure \ref{fig:contracts}, (\textbf{c, e, h})).
+\emph{AntsReview}, which manages access management and the core system (see Figure \ref{fig:contracts}, (\textbf{a, b, f, h}));
+\emph{Privacy}, which maintains the anonymity of the system via AZTEC Protocol (see Figure  \ref{fig:contracts}, (\textbf{d}));
+\emph{Tokenomics}, which manages the incentive mechanism of the system (see Figure \ref{fig:contracts}, (\textbf{c, e, h})). \newline Agents in the platform are: the issuers, the peer-reviewers, the approver, the contributors (Anters, members of the Ants-Review Community).
 
 \subsubsection{AntsReview.}
-AntsReview (see Figure \ref{fig:contracts} (\textbf{a}) is the core of the smart contracts written in \emph{Solidity}\footnote[7]{\emph{Solidity}.\textsc{URL:}https://solidity.readthedocs.io.}, a contract-oriented programming language for writing smart contracts that runs on the Ethereum Virtual Machine, deployed on Ethereum Kovan Testnet\footnote[8]{\emph{Kovan Testnet}.\textsc{URL:}https://kovan.etherscan.io/.}. AntsReview implements a bounty-like system (based on the \emph{StandardBounties} contract\footnote[9]{\emph{StandardBounties.sol}.\textsc{URL:}https://github.com/Bounties-Network/StandardBounties/blob/master/contracts/StandardBounties.sol.}) where Alice (issuer) can issue an AntReview with the function \emph{issueAntReview()}.
+AntsReview (see Figure \ref{fig:contracts} (\textbf{a}) is the core of the smart contracts written in \emph{Solidity}\footnote[7]{\emph{Solidity}.\textsc{URL:}https://solidity.readthedocs.io.}, a contract-oriented programming language for writing smart contracts that runs on the Ethereum Virtual Machine, deployed on Ethereum Kovan Testnet\footnote[8]{\emph{AntsReview}.\textsc{URL:}\newline https://kovan.etherscan.io/address/0x85be8F04482cBB920550d5469E4dEdD6e1788121.}. AntsReview implements a bounty-like system (based on the \emph{StandardBounties} contract\footnote[9]{\emph{StandardBounties.sol}.\textsc{URL:}https://github.com/Bounties-Network/StandardBounties/blob/master/contracts/StandardBounties.sol.}) where Alice (issuer) can issue an AntReview with the function \emph{issueAntReview()}.
 \newline In order to create a transparent and openly accessible AntReview, Alice has to complete a series of required tasks:
  \begin{itemize}
      \item \emph{upload of the files} containing the requirements of the peer-review and the paper to be reviewed into IPFS, whose hash is stored into the Ethereum blockchain as PoE;
      \item \emph{specification of a deadline} in the form of a UNIX timestamp after which the fulfillment will no longer be accepted;
      \item \emph{specification of the Issuers and an Approver} to respectively modify the AntReview and approve the peer-reviews sent by the peer-reviewers;
 \end{itemize}
- Alice or the Issuers can at any time update the AntReview details (issuers, paper, requirements, deadline) with the function \emph{changeAntReview()} and add/remove the Approver with the functions \emph{addApprover()} and \emph{removeApprover()}.
- Anters (members of the Ants-Review Community), can contribute to Alice's AntReview with the function \emph{contribute()}, by specifying the amount of ANTS they are willing to send.
- Bob (peer-reviewer) can download the files relative to Alice's paper and requirements by leveraging on the content-addressing feature of IPFS, that allows anyone to find the document using an IPFS explorer; subsequently, Bob can submit a peer-review before the deadline by fulfilling the AntReview created by Alice, with the function \emph{fulfillAntReview()}, by uploading the peer-review on IPFS, whose hash is stored into Ethereum blockchain as PoE. He can update the peer-review with the function \emph{updateReview()} by uploading the new version on IPFS.
-The Approver can accept the peer-review submitted by Bob with the function \emph{acceptAntReview()}, by specifying the amount of ANTS that will be transferred as reward from the contract to Bob.
+ Alice can at any time update the AntReview details (issuers, paper, requirements, deadline) with the function \emph{changeAntReview()} and add/remove the approver with the functions \emph{addApprover()} and \emph{removeApprover()}.
+ Anters (contributors) can contribute to Alice's AntReview with the function \emph{contribute()}, by specifying the amount of ANTS they are willing to send. 
+ \newline Bob (peer-reviewer) can download the files relative to Alice's paper and its requirements by leveraging on the content-addressing feature of IPFS that allows anyone to find the document using an IPFS explorer; subsequently, Bob can submit a peer-review before the deadline by fulfilling the AntReview created by Alice, with the function \emph{fulfillAntReview()}, by uploading the peer-review on IPFS, whose hash is stored into Ethereum blockchain as PoE. He can update the peer-review with the function \emph{updateReview()} by uploading the new version on IPFS. 
+ \newline Ted (approver) can accept the peer-review submitted by Bob with the function \emph{acceptAntReview()}, by specifying the amount of ANTS that will be transferred as reward from the contract to Bob.
 If Alice's AntReview does not receive any peer-review and the deadline expires, Anters can get a refund with the function \emph{refund()} for their contributions. In order to avoid residual balance, Alice can withdraw ANTS from the AntReview's balance, if the deadline expires, with the function \emph{withdrawAntReview()}, and the contract will transfer the amount specified to Alice and update the balance.
 
-Access management of the Ants-Review protocol is defined and controlled by AntsReviewRoles (see Figure \ref{fig:contracts} (\textbf{b})), implemented by leveraging on \emph{AccessControl.sol} by OpenZeppelin Solidity Library\footnote[10]{\emph{OpenZeppelin Library}.\textsc{URL:}https://openzeppelin.com.} that it's used to define the Issuer and Peer-Reviewer Roles.
-\newline AntsReviewRoles also integrates a circuit breaker design pattern via \emph{Pausable.sol} by OpenZeppelin to allow the Pauser Role, that by default is granted to the Owner of the smart contracts, to pause (or unpause) all the functions in case of a security emergency, such as an attack to the smart contracts.
+Access management of the Ants-Review protocol is defined and controlled by the \emph{AntsReviewRoles} (see Figure \ref{fig:contracts} (\textbf{b})), implemented by leveraging on \emph{AccessControl.sol} by OpenZeppelin Solidity Library\footnote[10]{\emph{OpenZeppelin Library}.\textsc{URL:}https://openzeppelin.com.} that is used to define the Issuer and Peer-Reviewer Roles. AntsReviewRoles also integrates a circuit breaker design pattern via \emph{Pausable.sol} by OpenZeppelin to allow the Pauser Role, that by default is granted to the owner of the smart contracts, to pause (or unpause) all the functions in case of a security emergency, such as an attack to the smart contracts.
 
 \subsubsection{Privacy}
-The anonymity of an agent in the system is achieved in two ways: via pseudo-anonymity, granted through Ethereum's EOAs that can pseudo-obscure the identity of the agent and via private transactions allowed by AZTEC Protocol \cite{AZTEC}'s security layer.
+The anonymity of an agent in the system is achieved in two ways: via pseudo-anonymity, granted through Ethereum's EOAs that can pseudo-obscure the identity of the agent, and via private transactions allowed by AZTEC Protocol \cite{AZTEC}'s security layer.
 
 \paragraph{\textbf{Pseudo-anonymity}.}EOAs in Ethereum are controlled via private keys. However, the privacy is limited by the fact that both the blockchain and its transactions are public.  Therefore, the details of the transactions are visible to anyone by browsing a block explorer (such as Etherscan) and are subject to data mining that could extract value and identify users in the blockchain.
-\paragraph{\textbf{Private transactions}.}AZTEC Protocol  was conceived to enable privacy on public blockchains. It uses Zero-Knowledge Succinct Non-Interactive Argument of Knowledge (ZK-SNARKs)\cite{ZKSNARKs} and homomorphic encryption\footnote[11]{\emph{Homomorphic Encryption}.\textsc{URL:}https://vitalik.ca/general/2020/07/20/homomorphic.html.} to validate encrypted transactions.
-\newline ZK-SNARKs are zero-knowledge proofs that require no interaction between prover and verifier. ZK-SNARKs are used inside the Ants-Review protocol via the zkANTS token to allow private transactions between the agents.
-\newline Future developments will allow to leverage on Permutations over Lagrange-bases for Oecumenical Noninteractive arguments of Knowledge (PLONK) \cite{PLONK}proofs, a universal ZK-SNARK construction that reduces gas costs and improves scalability.
+\paragraph{\textbf{Private transactions}.}AZTEC Protocol  was conceived to enable privacy on public blockchains. It uses Zero-Knowledge Succinct Non-Interactive Argument of Knowledge (ZK-SNARKs)\cite{zSNARK} and homomorphic encryption\footnote[11]{\emph{Homomorphic Encryption}. \textsc{URL:}\newline https://vitalik.ca/general/2020/07/20/homomorphic.html.} to validate encrypted transactions. ZK-SNARKs are zero-knowledge proofs that require no interaction between prover and verifier. ZK-SNARKs are used inside the Ants-Review protocol via the zkANTS token to allow private transactions between the agents. Future developments will allow to leverage on Permutations over Lagrange-bases for Oecumenical Noninteractive arguments of Knowledge (PLONK) \cite{PLONK} proofs, a universal zkSNARK construction that reduces gas costs and improves scalability.
 
 \subsubsection{Tokenomics}
-Ants-Review integrates a few \emph{ERC20}\footnote[12]{\emph{EIP 20}.\textsc{URL:}\url{https://eips.ethereum.org/EIPS/eip-20}.} tokens, each of which plays an integral role in the functioning and anonymity of the decentralized protocol.
-\newline ANTS (see Figure \ref{fig:contracts}, (\textbf{c})) is the primary protocol token and can be staked into an AntReview.
-\newline ANTS is implemented by inheriting \emph{ERC20PresetMinterPauser.sol} from OpenZeppelin Library with name \emph{Ants-Review} and symbol \emph{ANTS}.
-\newline zkANTS (see Figure \ref{fig:contracts}, (\textbf{d})) is a wrapper of ANTS that will be used inside the protocol to allow private transactions among the agents, preserving their anonymity as well as the amount of the AntReview reward and the contributions by the Anters. zkANTS will be implemented via AZTEC Protocol \cite{AZTEC}, that uses a cryptographic engine, \emph{ACE.sol}, a contract responsible for validating the set of AZTEC zero-knowledge proofs and performing any transfer instructions involving AZTEC notes, minted into a zkAsset, that can be converted into ERC20 tokens. In order to implement a zkAsset called zkANTS, \emph{zkAsset.sol}, a contract implementation of a confidential token that follows the EIP-1724 standard \footnote[13]{\emph{EIP  1724}.\textsc{URL:}\url{https://github.com/ethereum/EIPs/issues/1724.}}, will be used as template to build an AZTEC-compatible asset.
-\newline To optimize and scale transactions, AZTEC Protocol ZK-SNARKs will be extended in the future to PLONK \cite{PLONK} to collapse the gas costs of private transactions.
+Ants-Review integrates a few \emph{ERC20}\footnote[12]{\emph{EIP 20}. \textsc{URL:} https://eips.ethereum.org/EIPS/eip-20.} tokens, each of which plays an integral role in the functioning and anonymity of the decentralized protocol.
+\newline ANTS (see Figure \ref{fig:contracts}, (\textbf{c})) is the primary protocol token and can be staked into an AntReview. It's implemented by inheriting \emph{ERC20PresetMinterPauser.sol} from OpenZeppelin Library with name \emph{Ants-Review} and symbol \emph{ANTS}.
+\newline zkANTS (see Figure \ref{fig:contracts}, (\textbf{d})) is a wrapper of ANTS that will be used inside the protocol to allow for private transactions among the agents (Issuer and Reviewer), preserving their anonymity as well as the amount of the AntReview reward and the contributions by the Anters. It will be implemented via AZTEC Protocol \cite{AZTEC}, that uses a cryptographic engine, \emph{ACE.sol}, a contract responsible for validating the set of AZTEC zero-knowledge proofs and performing any transfer instructions involving AZTEC notes, minted into a zkAsset, that can be converted into ERC20 tokens. In order to implement a zkAsset called zkANTS, \emph{zkAsset.sol}, a contract implementation of a confidential token that follows the EIP-1724 standard \footnote[13]{\emph{EIP  1724}.\textsc{URL:}\url{https://github.com/ethereum/EIPs/issues/1724.}} will be used as template to build an AZTEC-compatible asset.
+
+\subsubsection{State of Art} The current state-of-the-art of Ants-Review is represented by version 0.2.0 (MVP) live on Ethereum Kovan Testnet (see Supplementary Material).
 
 \section{Discussions}
-We have described how Ants-Review protocol can solve the limitations of the current peer-review system (see 2.1). In particular we showed how the lack of recognition, the lack of transparency, fraud and misconduct can be solved via the Ants-Review Protocol (see § AntsReview in 3.2); social and cognitive biases via anonymity granted by AZTEC Protocol (see § Privacy in 3.2); the slowness of the process, the need for evaluation of the peer-reviews themselves and the need for increasing the number of reviewers by the creation of the community of Anters.
+We have described how Ants-Review protocol can solve the limitations of the current peer-review system (see 2.1). In particular we showed how the lack of recognition, the lack of transparency, fraud and misconduct can be solved via the Ants-Review Protocol (see § AntsReview in 3.2); the social and cognitive biases via anonymity granted by AZTEC Protocol (see § Privacy in 3.2); the slowness of the process, the need for evaluation of the peer-reviews themselves and the need for increasing the number of reviewers through the creation of the community of Anters. 
 \subsection{Future developments}
-An interesting aspect of the protocol is the double function of an AntReview respectively as a bounty and as a pool to stake ERC20 tokens like Dai\footnote[14]{\emph{Dai}.\textsc{URL:}https://docs.makerdao.com/smart-contract-modules/dai-module/dai-detailed-documentation.}. Moreover, the duration of peer-reviews consents to connect the protocol to De-Fi services with the possibility for the community to accrue interest over time via MakerDAO Dai Saving Rate (Pot\footnote[16]{\emph{Pot}.\textsc{URL:}https://docs.makerdao.com/smart-contract-modules/rates-module/pot-detailed-documentation.}) or Compound\footnote[17]{\emph{Compound}.\textsc{URL:}https://compound.finance.} to cite a few.
+An interesting aspect of the protocol is the double function of an AntReview respectively as a bounty and as a pool to stake ERC20 tokens like Dai\footnote[14]{\emph{Dai}.\textsc{URL:}https://docs.makerdao.com/smart-contract-modules/dai-module/dai-detailed-documentation.}. Moreover, the duration of peer-reviews consents to connect the protocol to De-Fi services with the possibility for the community to accrue interest over time via MakerDAO Dai Saving Rate (Pot\footnote[16]{\emph{Pot}.\textsc{URL:}https://docs.makerdao.com/smart-contract-modules/rates-module/pot-detailed-documentation.}) or Compound\footnote[17]{\emph{Compound}.\textsc{URL:}https://compound.finance.}, to cite a few.
 Therefore, an ERC20 \emph{pool token} would be automatically released by the protocol, representing the accrued interest on the Anters' stake over time that can be traded, sold, or held as the Anter desires.
 A Decentralized Autonomous Organization (DAO) \cite{Wang-DAO,DAOContr} could be formed in the future to allow ANTS stakers to participate in the governance of important aspects of the protocol, from smart contracts upgrades to minor changes in settings across the protocol.
-\newline Finally, a protocol upgrade inspired by \emph{Discover} \footnote[18]{\emph{Discover.sol}.\textsc{URL:}https://github.com/dap-ps/discover/blob/master/contracts/Discover.sol.} (\emph{Status} \footnote[19]{\emph{Status}.\textsc{URL:}https://status.im/.}) and still under investigation would allow Anters to validate peer-reviews via an upvote/downvote system that will consent the protocol to automatically pay out the reward to the reviewers based on the votes associated with their peer-reviews.
+\newline Finally, a protocol upgrade inspired by \emph{Discover} \footnote[18]{\emph{Discover.sol}. \textsc{URL:}\newline https://github.com/dap-ps/discover/blob/master/contracts/Discover.sol.}, a web3 browser by \emph{Status} \footnote[19]{\emph{Status}.\textsc{URL:}https://status.im/.} and still under investigation would allow Anters to validate peer-reviews via an upvote/downvote system that will consent the protocol to automatically pay out the reward to the reviewers based on the votes associated with their peer-reviews.
 
 \subsection{A new community-driven standard?}
 As Tennant points out \cite{Tennant2017-F1000R}, a change is already happening in the publishing industry, especially with new born publishers opening up the review process (\emph{BioMed Central}, \emph{ELife}, \emph{Frontiers}, \emph{PeerJ}, \emph{F1000 Research}). If also pre-print platforms integrate peer-review into their platforms, the dissociation of initial scientific dissemination and scientific validation will force the publishing industry to adapt in order to keep up with the higher quality scientific process offered by alternative peer-review platforms and justify their added value (\emph{ibidem}).
@@ -154,15 +151,16 @@ In our proposal we decoupled the peer-review process from the publishers giving 
 \section{Conclusion}
 In this paper we addressed a crucial problem within scholarly academic communication: the peer-review process. We've shown how blockchain technology could provide an efficient and viable solution to open up possible directions for a paradigm shift in scientific communication. We proposed an incentive mechanism that could solve the problems of lack of acknowledgment and trust during peer-reviews. We exposed the architecture of our project for which we adopted cutting-edge tools from the open source blockchain ecosystem.
 
-\small{
-\subsubsection{Supplementary material}
+
+\subsubsection{Supplementary Material}
 Source code, DOI: 10.5281/zenodo.3971044; 
 \newline DApp: https://ants-review.on.fleek.co;
 
+\small{
 \subsubsection{Declaration of Competing Interest}
 The authors declare no competing interests.
 
-\subsubsection{Acknowledgements} We would like to thank Matteo A. Tambussi, Andy Tudhope, Mark Beylin, Evan C. Harris and the external anonymous peer-reviewers for useful comments and revisions; Mitrasish Mukherjee for contributions on the UI/UX.}
+\subsubsection{Acknowledgements} We would like to thank Matteo A. Tambussi, Andy Tudhope, Mark Beylin, Evan C. Harris and the external anonymous peer-reviewers for useful comments and revisions; Mitrasish Mukherjee for contributions on the interface.}
 
 
 % ---- Bibliography ----
