--- a/ref3-system.bib
+++ b/ref3-system.bib
@@ -1,3 +1,10 @@
+@article{zSNARK, 
+author = {Reitwießner, Christian}, 
+title = {{zkSNARKs in a Nutshell}}, 
+url = {https://chriseth.github.io/notes/articles/zksnarks/zksnarks.pdf}, 
+local-url = {file://localhost/Users/bt_neurospin/Documents/PAPERS/zksnarks.pdf}, 
+year = {2016}
+}
 @article{QVWeyl, 
 author = {Weyl, E. Glen}, 
 title = {{The robustness of quadratic voting}}, 
@@ -140,6 +147,6 @@ author = {Trovò, Bianca and Massari, Nazzareno},
 title = {{Ants-Review: a Bounty-like system for Open Anonymous Scientific Peer-Reviews}}, 
 doi = {10.5281/zenodo.3828087}, 
 abstract = {{Peer-review is a necessary and essential quality control step for scientific publications. However, the process, which is very costly in terms of time investment, not only is not remunerated but it’s also not recognized by the academic community as a relevant scientific output for a researcher. Therefore, scientific dissemination is affected. Here, to solve this issue we propose a blockchain-based incentive protocol that rewards scientists also for their contributions to other scientists’ work and that builds up a reputational system. We designed a basic Bounty-like contract called AntsReview that allows any author to issue a call for peer-reviewing their scientific publication. If requirements are met, peer-reviews will be audited by an external editor and payed by the Issuer. To promote ethical behaviour the system will implement a quadratic funding on AntsReview.}}, 
-local-url = {file://localhost/Users/bt_neurospin/Downloads/ETHTurin2020_team2_AntsReview-v0.pdf}, 
+local-url = {file://localhost/Users/bt_neurospin/Documents/Papers%20Library/ETHTurin2020_team2_AntsReview-v0.pdf}, 
 year = {2020}
 }
