cleanup by @naszam

--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -114,7 +114,7 @@ AntsReview (see Figure \ref{fig:contracts} (\textbf{a}) is the core of the smart
      \item \emph{specification of a deadline} in the form of a UNIX timestamp after which the fulfillment will no longer be accepted;
      \item \emph{specification of the Issuers and an Approver} to respectively modify the AntReview and approve the peer-reviews sent by the peer-reviewers;
 \end{itemize}
- Alice can at any time update the AntReview details (issuers, paper, requirements, deadline) with the function \emph{changeAntReview()} and add/remove the approver with the functions \emph{addApprover()} and \emph{removeApprover()}.
+ Alice or the issuers can at any time update the AntReview details (issuers, paper, requirements, deadline) with the function \emph{changeAntReview()} and add/remove the approver with the functions \emph{addApprover()} and \emph{removeApprover()}.
  Anters (contributors) can contribute to Alice's AntReview with the function \emph{contribute()}, by specifying the amount of ANTS they are willing to send. 
  \newline Bob (peer-reviewer) can download the files relative to Alice's paper and its requirements by leveraging on the content-addressing feature of IPFS that allows anyone to find the document using an IPFS explorer; subsequently, Bob can submit a peer-review before the deadline by fulfilling the AntReview created by Alice, with the function \emph{fulfillAntReview()}, by uploading the peer-review on IPFS, whose hash is stored into Ethereum blockchain as PoE. He can update the peer-review with the function \emph{updateReview()} by uploading the new version on IPFS. 
  \newline Ted (approver) can accept the peer-review submitted by Bob with the function \emph{acceptAntReview()}, by specifying the amount of ANTS that will be transferred as reward from the contract to Bob.
@@ -130,8 +130,8 @@ The anonymity of an agent in the system is achieved in two ways: via pseudo-anon
 
 \subsubsection{Tokenomics}
 Ants-Review integrates a few \emph{ERC20}\footnote[12]{\emph{EIP 20}. \textsc{URL:} https://eips.ethereum.org/EIPS/eip-20.} tokens, each of which plays an integral role in the functioning and anonymity of the decentralized protocol.
-\newline ANTS (see Figure \ref{fig:contracts}, (\textbf{c})) is the primary protocol token and can be staked into an AntReview. It's implemented by inheriting \emph{ERC20PresetMinterPauser.sol} from OpenZeppelin Library with name \emph{Ants-Review} and symbol \emph{ANTS}.
-\newline zkANTS (see Figure \ref{fig:contracts}, (\textbf{d})) is a wrapper of ANTS that will be used inside the protocol to allow for private transactions among the agents (Issuer and Reviewer), preserving their anonymity as well as the amount of the AntReview reward and the contributions by the Anters. It will be implemented via AZTEC Protocol \cite{AZTEC}, that uses a cryptographic engine, \emph{ACE.sol}, a contract responsible for validating the set of AZTEC zero-knowledge proofs and performing any transfer instructions involving AZTEC notes, minted into a zkAsset, that can be converted into ERC20 tokens. In order to implement a zkAsset called zkANTS, \emph{zkAsset.sol}, a contract implementation of a confidential token that follows the EIP-1724 standard \footnote[13]{\emph{EIP  1724}.\textsc{URL:}\url{https://github.com/ethereum/EIPs/issues/1724.}} will be used as template to build an AZTEC-compatible asset.
+\newline ANTS (see Figure \ref{fig:contracts}, (\textbf{c})) is the primary protocol token and can be staked into an AntReview. It's implemented by inheriting \emph{ERC20.sol} from OpenZeppelin Library with name \emph{Ants-Review} and symbol \emph{ANTS}.
+\newline zkANTS (see Figure \ref{fig:contracts}, (\textbf{d})) is a wrapper of ANTS that will be used inside the protocol to allow for private transactions among the agents (issuer and reviewer), preserving their anonymity as well as the amount of the AntReview reward and the contributions by the Anters. It will be implemented via AZTEC Protocol \cite{AZTEC}, that uses a cryptographic engine, \emph{ACE.sol}, a contract responsible for validating the set of AZTEC zero-knowledge proofs and performing any transfer instructions involving AZTEC notes, minted into a zkAsset, that can be converted into ERC20 tokens. In order to implement a zkAsset called zkANTS, \emph{zkAsset.sol}, a contract implementation of a confidential token that follows the EIP-1724 standard \footnote[13]{\emph{EIP  1724}.\textsc{URL:}\url{https://github.com/ethereum/EIPs/issues/1724.}} will be used as template to build an AZTEC-compatible asset.
 
 \subsubsection{State of Art} The current state-of-the-art of Ants-Review is represented by version 0.2.0 (MVP) live on Ethereum Kovan Testnet (see Supplementary Material).
 
