fix description fig 1 by @naszam

--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -96,7 +96,7 @@ Thus, the system acts also as a reputation builder.
 \textbf{d} Faucet to distribute \emph{ANTS} on Kovan Testnet for testing purposes. 
 \textbf{e} Integration with Aztec Protocol to wrap (\textbf{c}) into \emph{zkANTS} to implement private \emph{ANTS} transactions on Ethereum.
 \textbf{f} Integration with IPFS to upload papers, requirements and peer-reviews and store the hash as \emph{PoE} into AntsReview.
-\textbf{g} Integration with De-Fi services like \emph{Dai} and \emph{Chai}, to be used as tokens in the protocol.
+\textbf{g} Integration with ERC20 tokens like \emph{Dai}, and De-Fi services like MakerDAO DSR to be used in the protocol.
 \textbf{h} Library used by the protocol for secure contract development with the modules listed.}}
 \label{fig:contracts}
 \end{figure}
