--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -41,7 +41,7 @@ Blockchain Engineer, London, UK \\
 \maketitle              % typeset the header of the contribution
 %
 \begin{abstract}
-Peer-review is a necessary and essential quality control step for scientific publications but lacks proper  incentives. Indeed, the process, which is very costly in terms of time and intellectual investment, not only is not remunerated by the journals but it is also not openly recognized by the academic community as a relevant scientific output for a researcher. Therefore, scientific dissemination is affected in the timeliness, quality and fairness. Here, to solve this issue, we propose a blockchain-based incentive system that rewards scientists for peer-reviewing other scientists’ work and that builds up trust and reputation. We designed a protocol of smart contracts called Ants-Review that allows authors to issue a bounty for open anonymous peer-reviews on Ethereum. If requirements are met, peer-reviews will be accepted and payed by the approver proportionally to their assessed quality. To promote ethical behaviour and inclusiveness the system implements a gamified mechanism that allows the whole community to evaluate the peer-reviews and vote for the best ones.
+Peer-review is a necessary and essential quality control step for scientific publications but lacks proper  incentives. Indeed, the process, which is very costly in terms of time and intellectual investment, not only is not remunerated by the journals but it is also not openly recognized by the academic community as a relevant scientific output for a researcher. Therefore, scientific dissemination is affected in timeliness, quality and fairness. Here, to solve this issue, we propose a blockchain-based incentive system that rewards scientists for peer-reviewing other scientists’ work and that builds up trust and reputation. We designed a protocol of smart contracts called Ants-Review that allows authors to issue a bounty for open anonymous peer-reviews on Ethereum. If requirements are met, peer-reviews will be accepted and paid by the approver proportionally to their assessed quality. To promote ethical behaviour and inclusiveness the system implements a gamified mechanism that allows the whole community to evaluate the peer-reviews and vote for the best ones.
 \keywords{Blockchain \and Ethereum \and Peer-review \and Incentivization.}
 \end{abstract}
 %
@@ -54,13 +54,13 @@ In this paper we propose a solution to the problem of reviewers recognition base
 
 \section{Background}
 \subsection{Peer-review: present problems and mild solutions}
-Peer review is still the only quality control mechanism devoted to evaluate scientific outcomes. The purpose of peer review is "improving the quality of the published paper, determining the originality of the manuscript, determining the importance of the findings, detecting fraud, and detecting plagiarism." \cite{Gropp-PeerRevStress}. However, the system is 'ﬂawed' and outdated \cite{Smith2006} and presents multifaceted issues \cite{Walker2015-trends}, here reviewed.
+Peer review is still the only quality control mechanism devoted to evaluating scientific outcomes. The purpose of peer review is "improving the quality of the published paper, determining the originality of the manuscript, determining the importance of the findings, detecting fraud, and detecting plagiarism." \cite{Gropp-PeerRevStress}. However, the system is 'ﬂawed' and outdated \cite{Smith2006} and presents multifaceted issues \cite{Walker2015-trends}, here reviewed.
 \subsubsection{A slow multi-stage process.} The main issues affecting the effectiveness of peer-review is the delay between paper submission and journal acceptance for publication. The traditional peer-review process is centralized around the publisher's editor(s). The author(s) submits manuscript to the journal where an editorial team assesses if the paper meets the scopes of the journal and novelty criteria. If the editorial decision is to send the manuscript for review, the handling editor personally selects potential reviewers. The reviewers identity is usually only known to the editor but is hidden to the authors or the other reviewers themselves (\emph{single-blind review}). Reviewers independently conduct their reviews by exposing in their reports strengths and weaknesses of the manuscript and sometimes substantially improving the draft. Depending on if the decision is a major or minor revision, authors are invited to re-submit a corrected or improved version of the manuscript. The same reviewers might be contacted again to continue the same peer-review process. This process can take multiple rounds and is a huge time investment both for authors and reviewers. An analysis of all papers published in \emph{PubMed} for a time period of 30 years claims that the median review time is around 100 days \cite{Kendall-peerrev}.
 \subsubsection{Lack of recognition and incentives.} Peer-reviewing is an invisible activity purely conducted on voluntary basis, neither paid by the journals or officially credited via standard scientific metrics (such as the ones that establish the 'impact factor' of an author). Thus, it does not lead to advancements in career or help securing grants. Researchers are motivated to do peer-review by a sense of belonging and a desire to 'give back' to the community. A major consequence of not promoting incentives for the quality (and quantity) of peer-reviews is to either slow down publication of potentially good research which awaits for validation \cite{HauserIncent} or let bad science be published through sloppy and uncritical reviews.
 \subsubsection{Fraud and misconduct.} Due to the 'publish or perish culture' pressures, unethical behaviour from reviewers has been occasionally reported, from abusive behaviour towards authors \cite{Smith2006,tragedy-reviewers} to identity fraud. Some studies have reported an improvement in the transparency and civility of the review process when open reports are released according to the standards of \emph{open peer review} \cite{PeerRev-NatComm}.
-\subsubsection{Social and cognitive biases.} Given the fact that anonymity is usually asymmetrically applied only for reviewers, many power related dynamics can influence the reviewers decision \cite{Tennant2017-F1000R}, such as gender or cultural discrimination and social prestige of the institution. To solve this problem some journals have implemented \emph{double-blind review} process (identity of both authors and reviewers are masked) which seems to reduce the bias towards minorities.
+\subsubsection{Social and cognitive biases.} Given the fact that anonymity is usually asymmetrically applied only for reviewers, many power related dynamics can influence the reviewers decision \cite{Tennant2017-F1000R}, such as gender or cultural discrimination and social prestige of the institution. To solve this problem some journals have implemented \emph{double-blind review} process (the identity of both authors and reviewers are masked) which seems to reduce the bias towards minorities.
 \subsubsection{Peer reviews need to be...reviewed.} There is high variability in the reliability and depth of reviews and a recurrent question is: "Who watches the watchers?" \cite{Tennant2017-F1000R}.
-\subsubsection{Need for more reviewers.} There is a disproportion between the progressive increase in journals publications and the number of experienced reviewers selected for the task which demands an expansion of the reviewer's pool including early career scientists \cite{tragedy-reviewers,Warne-RewRev}.
+\subsubsection{Need for more reviewers.} There is a disproportion between the progressive increase in journal publications and the number of experienced reviewers selected for the task which demands an expansion of the reviewer's pool including early career scientists \cite{tragedy-reviewers,Warne-RewRev}.
 
 \subsection{Related work} Some mild attempts to credit peer review have been handled without much success by journals via attribution of virtual 'badges', certificates of performance, citation in annual editorials \cite{Tennant2017-F1000R} where performance, though, is assessed only in terms of quantity of reviews but not quality \cite{Warne-RewRev}.
 \newline Partnering with publishers, the startup \emph{Publons}\footnote[1]{\emph{Publons}.\textsc{URL:} https://publons.com/about/home.} provides a free metric service for track, verification and recognition of publications, peer-reviews and journal editing in a single researcher identifier that showcases a record of scientific activity and impact based on authors' productivity.
@@ -72,13 +72,13 @@ In this paper we propose Ants-Review, a new incentivisation mechanism built on E
 
 \subsection{Design}
 
-\subsubsection{Incentivization and recognition.} A popular incentive model for open source software (OSS) is represented by Bounties. Bounties are prizes or monetary rewards given for completing a task before a deadline \cite{BountyGit}. Examples of such platforms that allow funders (bounty backers) to pay developers (bounty hunters) for open source contributions are \emph{Gitcoin}\footnote[2]{\emph{Gitcoin}.\textsc{URL:} https://gitcoin.co.} and \emph{The Bounties Network}\footnote[3]{\emph{The Bounties Network}.\textsc{URL:}https://bounties.network.}. Incentives can be represented by tokens, unit of values registered on blockchain networks.
+\subsubsection{Incentivization and recognition.} A popular incentive model for open source software (OSS) is represented by Bounties. Bounties are prizes or monetary rewards given for completing a task before a deadline \cite{BountyGit}. Examples of such platforms that allow funders (bounty backers) to pay developers (bounty hunters) for open source contributions are \emph{Gitcoin}\footnote[2]{\emph{Gitcoin}.\textsc{URL:} https://gitcoin.co.} and \emph{The Bounties Network}\footnote[3]{\emph{The Bounties Network}.\textsc{URL:}https://bounties.network.}. Incentives can be represented by tokens, units of values registered on blockchain networks.
 \newline In the network of the scientific community reviewers provide a service and those who consume it (authors, journals) should be able to contribute with tokens. The amount of tokens reflects material and symbolic recognition of the performed work that can be statistically quantified for author-level metrics measuring the productivity and impact of a researcher.
 Thus, the system acts also as a reputation builder.
 
 \subsubsection{Transparency and re-usability of the records.} The peer-review history, including authors' replies and reviewers' recommendations, should be openly and permanently accessible to the community (in the form of 'open reports' of open peer-reviews) even before articles' publication in order to  make editorial decisions more democratic and prevent waste of knowledge. Following the example of models offered by journals peer-review consortia, such as the \emph{Neuroscience Peer Review Consortium}\footnote[4]{\emph{Neuroscience Peer Review Consortium}.\textsc{URL:}http://nprc.incf.org.} and independent companies like \emph{ResearchSquare} \footnote[5]{\emph{ResearchSquare}.\textsc{URL:}https://www.researchsquare.com.} and \emph{Peerage of Science} \footnote[6]{\emph{Peerage of Science}.\textsc{URL:} https://www.peerageofscience.org.}, that provide a scientific peer review service, peer-reviews in Ants-Review will be transferable across journals (like in 'cascading' or 'portable peer-reviews').
 
-\subsubsection{Accountability via pseudo-anonymity.} In order to counteract malicious behaviour (see 2.1) affecting the integrity of the reviews but also to correctly attribute the intellectual contributions making sure there are no conflict of interest, it's important to be able to track back the identities of the contributors to a peer-review report. This is possible if the platform acts like a version control system where commits are permanent and their hashes timestamped. InterPlanetary File System (IPFS) \cite{IPFS} is a peer-to-peer hypermedia protocol for storing data in a distributed file system over the internet which guarantees data immutability and unique file identification via cryptographic hashes. IPFS' hashes are then stored inside the smart contracts' state that is timestamped into the Ethereum blocks where  the transactions take place; there, data remain unaltered and indelible. This notarization process is called proof of existence (PoE) and allows manual verification of the existence of the document.
+\subsubsection{Accountability via pseudo-anonymity.} In order to counteract malicious behaviour (see 2.1) affecting the integrity of the reviews but also to correctly attribute the intellectual contributions making sure there are no conflicts of interest, it's important to be able to track back the identities of the contributors to a peer-review report. This is possible if the platform acts like a version control system where commits are permanent and their hashes timestamped. InterPlanetary File System (IPFS) \cite{IPFS} is a peer-to-peer hypermedia protocol for storing data in a distributed file system over the internet which guarantees data immutability and unique file identification via cryptographic hashes. IPFS' hashes are then stored inside the smart contracts' state that is timestamped into the Ethereum blocks where  the transactions take place; there, data remains unaltered and indelible. This notarization process is called proof of existence (PoE) and allows manual verification of the existence of the document.
 \newline To prevent retaliation for negative peer-reviews and to promote the participation of early researchers who might feel intimidated to judge the scientific work of senior authors, the Ants-Review system maintains the privacy of both authors and reviewers in a double-blind approach via Ethereum’s externally owned accounts (EOA) addresses and zero-knowledge proof, a cryptographic method where a party can prove to another party the possession of certain information, like a secret key, without revealing that information (see 3.2).
 
 \subsubsection{Inclusiveness via gamification.} As a final step we propose that all the community is involved in the process of peer-reviewing by abolishing the editorial selection process through 'open participation' (or 'open interaction', 'open platform' \cite{OPR-Ross-Hellauer,RossHellauer-OPR}). In this way, the pool of reviewers is enriched and allows younger researchers to get the appropriate training through interactive feedback. Moreover, peer-reviews could be evaluated, commented, criticised by the other members of the scientific community, enabling a virtuous loop of verification. An interesting addition would be to introduce a rank of peer-reviews resulting from the community feedback via a voting process (see 4.1). It's conceivable that the community members that engage in assessing the quality of peer-reviews could be incentivized as well. This solution would create a self-reinforcing ethical behaviour where the fair evaluation of peer-reviews would be also in the interest of the agents at play.
@@ -126,12 +126,12 @@ Access management of the Ants-Review protocol is defined and controlled by the \
 The anonymity of an agent in the system is achieved in two ways: via pseudo-anonymity, granted through Ethereum's EOAs that can pseudo-obscure the identity of the agent, and via private transactions allowed by AZTEC Protocol \cite{AZTEC}'s security layer.
 
 \paragraph{\textbf{Pseudo-anonymity}.}EOAs in Ethereum are controlled via private keys. However, the privacy is limited by the fact that both the blockchain and its transactions are public.  Therefore, the details of the transactions are visible to anyone by browsing a block explorer (such as Etherscan) and are subject to data mining that could extract value and identify users in the blockchain.
-\paragraph{\textbf{Private transactions}.}AZTEC Protocol  was conceived to enable privacy on public blockchains. It uses Zero-Knowledge Succinct Non-Interactive Argument of Knowledge (ZK-SNARKs)\cite{zSNARK} and homomorphic encryption\footnote[11]{\emph{Homomorphic Encryption}. \textsc{URL:}\newline https://vitalik.ca/general/2020/07/20/homomorphic.html.} to validate encrypted transactions. ZK-SNARKs are zero-knowledge proofs that require no interaction between prover and verifier. ZK-SNARKs are used inside the Ants-Review protocol via the zkANTS token to allow private transactions between the agents. Future developments will allow to leverage on Permutations over Lagrange-bases for Oecumenical Noninteractive arguments of Knowledge (PLONK) \cite{PLONK} proofs, a universal zkSNARK construction that reduces gas costs and improves scalability.
+\paragraph{\textbf{Private transactions}.}AZTEC Protocol  was conceived to enable privacy on public blockchains. It uses Zero-Knowledge Succinct Non-Interactive Argument of Knowledge (ZK-SNARKs)\cite{zSNARK} and homomorphic encryption\footnote[11]{\emph{Homomorphic Encryption}. \textsc{URL:}\newline https://vitalik.ca/general/2020/07/20/homomorphic.html.} to validate encrypted transactions. ZK-SNARKs are zero-knowledge proofs that require no interaction between prover and verifier. ZK-SNARKs are used inside the Ants-Review protocol via the zkANTS token to allow private transactions between the agents. Future developments will allow leverage on Permutations over Lagrange-bases for Oecumenical Noninteractive arguments of Knowledge (PLONK) \cite{PLONK} proofs, a universal zkSNARK construction that reduces gas costs and improves scalability.
 
 \subsubsection{Tokenomics}
 Ants-Review integrates a few \emph{ERC20}\footnote[12]{\emph{EIP 20}. \textsc{URL:} https://eips.ethereum.org/EIPS/eip-20.} tokens, each of which plays an integral role in the functioning and anonymity of the decentralized protocol.
 \newline ANTS (see Figure \ref{fig:contracts}, (\textbf{c})) is the primary protocol token and can be staked into an AntReview. It's implemented by inheriting \emph{ERC20.sol} from OpenZeppelin Library with name \emph{Ants-Review} and symbol \emph{ANTS}.
-\newline zkANTS (see Figure \ref{fig:contracts}, (\textbf{d})) is a wrapper of ANTS that will be used inside the protocol to allow for private transactions among the agents (issuer and reviewer), preserving their anonymity as well as the amount of the AntReview reward and the contributions by the Anters. It will be implemented via AZTEC Protocol \cite{AZTEC}, that uses a cryptographic engine, \emph{ACE.sol}, a contract responsible for validating the set of AZTEC zero-knowledge proofs and performing any transfer instructions involving AZTEC notes, minted into a zkAsset, that can be converted into ERC20 tokens. In order to implement a zkAsset called zkANTS, \emph{zkAsset.sol}, a contract implementation of a confidential token that follows the EIP-1724 standard \footnote[13]{\emph{EIP  1724}.\textsc{URL:}\url{https://github.com/ethereum/EIPs/issues/1724.}} will be used as template to build an AZTEC-compatible asset.
+\newline zkANTS (see Figure \ref{fig:contracts}, (\textbf{d})) is a wrapper of ANTS that will be used inside the protocol to allow for private transactions among the agents (issuer and reviewer), preserving their anonymity as well as the amount of the AntReview reward and the contributions by the Anters. It will be implemented via AZTEC Protocol \cite{AZTEC}, that uses a cryptographic engine, \emph{ACE.sol}, a contract responsible for validating the set of AZTEC zero-knowledge proofs and performing any transfer instructions involving AZTEC notes, minted into a zkAsset, that can be converted into ERC20 tokens. In order to implement a zkAsset called zkANTS, \emph{zkAsset.sol}, a contract implementation of a confidential token that follows the EIP-1724 standard \footnote[13]{\emph{EIP  1724}.\textsc{URL:}\url{https://github.com/ethereum/EIPs/issues/1724.}} will be used as a template to build an AZTEC-compatible asset.
 
 \subsubsection{State of Art} The current state-of-the-art of Ants-Review is represented by version 0.2.0 (MVP) live on Ethereum Kovan Testnet (see Supplementary Material).
 
@@ -146,7 +146,7 @@ A Decentralized Autonomous Organization (DAO) \cite{Wang-DAO,DAOContr} could be 
 \subsection{A new community-driven standard?}
 As Tennant points out \cite{Tennant2017-F1000R}, a change is already happening in the publishing industry, especially with new born publishers opening up the review process (\emph{BioMed Central}, \emph{ELife}, \emph{Frontiers}, \emph{PeerJ}, \emph{F1000 Research}). If also pre-print platforms integrate peer-review into their platforms, the dissociation of initial scientific dissemination and scientific validation will force the publishing industry to adapt in order to keep up with the higher quality scientific process offered by alternative peer-review platforms and justify their added value (\emph{ibidem}).
 In our proposal we decoupled the peer-review process from the publishers giving it back to the scientific community and applying incentives from tokenomics. We foresee that the future will evolve towards community-driven peer-reviews: peer-reviews will be more and more independent from publishers \cite{DecoupJ}, and researchers will be the ones seeking the papers to review to build reputation within the community and not journals.
-\newline Enlarging the pool of reviewers to potentially an entire scientific community and accelerating the whole process might require a new standard for peer-reviews: for example some aspects might be taken over by AI assistants (such as the \emph{Artificial Intelligence Review Assistant (AIRA)}\footnote[20]{\emph{Artificial Intelligence to help meet global demand for high-quality, objective peer-review in publishing.} Posted on July 1, 2020 in \emph{Frontiers Announcements, Open Science and Peer Review}. \textsc{URL:} https://blog.frontiersin.org/2020/07/01/artificial-intelligence-peer-review-assistant-aira/.}) leaving to the reviewers the sole task of evaluating the content of a paper. Building smart-contracts for peer-reviews might set a first step in this standardization. We hope that soon the value of peer review as public good will be recognized by research funders and hiring committees.
+\newline Enlarging the pool of reviewers to potentially an entire scientific community and accelerating the whole process might require a new standard for peer-reviews: for example some aspects might be taken over by AI assistants (such as the \emph{Artificial Intelligence Review Assistant (AIRA)}\footnote[20]{\emph{Artificial Intelligence to help meet global demand for high-quality, objective peer-review in publishing.} Posted on July 1, 2020 in \emph{Frontiers Announcements, Open Science and Peer Review}. \textsc{URL:} https://blog.frontiersin.org/2020/07/01/artificial-intelligence-peer-review-assistant-aira/.}) leaving to the reviewers the sole task of evaluating the content of a paper. Building smart-contracts for peer-reviews might set a first step in this standardization. We hope that soon the value of peer review as a public good will be recognized by research funders and hiring committees.
 
 \section{Conclusion}
 In this paper we addressed a crucial problem within scholarly academic communication: the peer-review process. We've shown how blockchain technology could provide an efficient and viable solution to open up possible directions for a paradigm shift in scientific communication. We proposed an incentive mechanism that could solve the problems of lack of acknowledgment and trust during peer-reviews. We exposed the architecture of our project for which we adopted cutting-edge tools from the open source blockchain ecosystem.
@@ -160,7 +160,7 @@ Source code, DOI: 10.5281/zenodo.3971044;
 \subsubsection{Declaration of Competing Interest}
 The authors declare no competing interests.
 
-\subsubsection{Acknowledgements} We would like to thank Matteo A. Tambussi, Andy Tudhope, Mark Beylin, Evan C. Harris and the external anonymous peer-reviewers for useful comments and revisions; Mitrasish Mukherjee for contributions on the interface.}
+\subsubsection{Acknowledgements} We would like to thank Matteo A. Tambussi, Andy Tudhope, Mark Beylin, Simona Pop, Evan C. Harris and the external anonymous peer-reviewers for useful comments and revisions; Mitrasish Mukherjee for contributions on the interface.}
 
 
 % ---- Bibliography ----
