--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -66,9 +66,7 @@ Peer review is still the only quality control mechanism devoted to evaluating sc
 \newline Partnering with publishers, the startup \emph{Publons}\footnote[1]{\emph{Publons}.\textsc{URL:} https://publons.com/about/home.} provides a free metric service for track, verification and recognition of publications, peer-reviews and journal editing in a single researcher identifier that showcases a record of scientific activity and impact based on authors' productivity.
 
 \section{System concept}
-In this paper we propose Ants-Review, a new incentivisation mechanism built on Ethereum that issues open peer-reviews to validate scientific papers while preserving the anonymity of its contributors. We imagine a final paper originating from the peer-review process as a complex system that emerges from the interactions between the authors and the reviewers, a whole that is more than the sum of its parts. Therefore, the name evokes an ant colony as a self-organising organism in which all micro-contributions of the individuals emerge into complex behaviour.
-\newline The original proposal behind this paper can be found here \cite{AntsReview}.
-\newline Its design and implementation are exposed in the following section.
+In this paper we propose Ants-Review, a new incentivisation mechanism built on Ethereum that issues open peer-reviews to validate scientific papers while preserving the anonymity of its contributors. We imagine a final paper originating from the peer-review process as a complex system that emerges from the interactions between the authors and the reviewers, a whole that is more than the sum of its parts. Therefore, the name evokes an ant colony as a self-organising organism in which all micro-contributions of the individuals emerge into complex behaviour. The original proposal behind this paper can be found here \cite{AntsReview}. Its design and implementation are exposed in the following section.
 
 \subsection{Design}
 
@@ -144,9 +142,8 @@ A Decentralized Autonomous Organization (DAO) \cite{Wang-DAO,DAOContr} could be 
 \newline Finally, a protocol upgrade inspired by \emph{Discover} \footnote[18]{\emph{Discover.sol}. \textsc{URL:}\newline https://github.com/dap-ps/discover/blob/master/contracts/Discover.sol.}, a web3 browser by \emph{Status} \footnote[19]{\emph{Status}.\textsc{URL:}https://status.im/.} and still under investigation would allow Anters to validate peer-reviews via an upvote/downvote system that will consent the protocol to automatically pay out the reward to the reviewers based on the votes associated with their peer-reviews.
 
 \subsection{A new community-driven standard?}
-As Tennant points out \cite{Tennant2017-F1000R}, a change is already happening in the publishing industry, especially with new born publishers opening up the review process (\emph{BioMed Central}, \emph{ELife}, \emph{Frontiers}, \emph{PeerJ}, \emph{F1000 Research}). If also pre-print platforms integrate peer-review into their platforms, the dissociation of initial scientific dissemination and scientific validation will force the publishing industry to adapt in order to keep up with the higher quality scientific process offered by alternative peer-review platforms and justify their added value (\emph{ibidem}).
-In our proposal we decoupled the peer-review process from the publishers giving it back to the scientific community and applying incentives from tokenomics. We foresee that the future will evolve towards community-driven peer-reviews: peer-reviews will be more and more independent from publishers \cite{DecoupJ}, and researchers will be the ones seeking the papers to review to build reputation within the community and not journals.
-\newline Enlarging the pool of reviewers to potentially an entire scientific community and accelerating the whole process might require a new standard for peer-reviews: for example some aspects might be taken over by AI assistants (such as the \emph{Artificial Intelligence Review Assistant (AIRA)}\footnote[20]{\emph{Artificial Intelligence to help meet global demand for high-quality, objective peer-review in publishing.} Posted on July 1, 2020 in \emph{Frontiers Announcements, Open Science and Peer Review}. \textsc{URL:} https://blog.frontiersin.org/2020/07/01/artificial-intelligence-peer-review-assistant-aira/.}) leaving to the reviewers the sole task of evaluating the content of a paper. Building smart-contracts for peer-reviews might set a first step in this standardization. We hope that soon the value of peer review as a public good will be recognized by research funders and hiring committees.
+As Tennant points out \cite{Tennant2017-F1000R}, a change is already happening in the publishing industry, especially with new born publishers opening up the review process (\emph{BioMed Central}, \emph{ELife}, \emph{Frontiers}, \emph{PeerJ}, \emph{F1000 Research}). Recently, pre-print servers, such as arXiv and biorXiv, started integrating peer-review services into their platforms: \emph{PREreview} \footnote[20]{\emph{PREreview.}  \textsc{URL:} https://www.prereview.org}, \emph{PeerCommunityIn.} \footnote[21]{\emph{PeerCommunityIn} \textsc{URL:} https://peercommunityin.org}, \emph{Review Commons} \footnote[22]{\emph{Review Commons.} \textsc{URL:} https://www.reviewcommons.org}, \emph{PrePrint Review} \footnote[23]{\emph{PrePrint Review.} \textsc{URL:} https://elifesci.org/preprint-review} and the previously mentioned \emph{Peerage of Science}. This dissociation of initial scientific dissemination and scientific validation will force the publishing industry to adapt in order to keep up with the higher quality scientific process offered by those alternative peer-review platforms and justify their added value (\emph{ibidem}). In our proposal we also decoupled the peer-review process from the publishers giving it back to the scientific community and applying incentives from tokenomics. We foresee that the future will evolve towards community-driven peer-reviews: peer-reviews will be more and more independent from publishers \cite{DecoupJ}, and researchers will be the ones seeking the papers to review to build reputation within the community and not journals.
+\newline Enlarging the pool of reviewers to potentially an entire scientific community and accelerating the whole process requires a standard for peer-reviews: for example some aspects might be taken over by AI assistants (such as the \emph{Artificial Intelligence Review Assistant (AIRA)}\footnote[24]{\emph{Artificial Intelligence to help meet global demand for high-quality, objective peer-review in publishing.} Posted on July 1, 2020 in \emph{Frontiers Announcements, Open Science and Peer Review}. \textsc{URL:} https://blog.frontiersin.org/2020/07/01/artificial-intelligence-peer-review-assistant-aira/.}) leaving to the reviewers the sole task of evaluating the content of a paper. Building smart-contracts for peer-reviews might accelerate this novel process of standardization. We hope that soon the value of peer review as a public good will be recognized by research funders and hiring committees.
 
 \section{Conclusion}
 In this paper we addressed a crucial problem within scholarly academic communication: the peer-review process. We've shown how blockchain technology could provide an efficient and viable solution to open up possible directions for a paradigm shift in scientific communication. We proposed an incentive mechanism that could solve the problems of lack of acknowledgment and trust during peer-reviews. We exposed the architecture of our project for which we adopted cutting-edge tools from the open source blockchain ecosystem.
